// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should select reply by replyId should ask user to turn on notification settings if and only if they did not turn it on: Not allowing notification yet 1`] = `
Array [
  Object {
    "altText": "Is the reply helpful?",
    "contents": Object {
      "contents": Array [
        Object {
          "body": Object {
            "contents": Array [
              Object {
                "text": "Is the reply helpful?",
                "type": "text",
                "wrap": true,
              },
            ],
            "layout": "vertical",
            "paddingAll": "xl",
            "type": "box",
          },
          "footer": Object {
            "contents": Array [
              Object {
                "action": Object {
                  "label": "👍 Yes",
                  "type": "uri",
                  "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=feedback&articleId=AWDZYXxAyCdS-nWhumlz&replyId=AWDZeeV0yCdS-nWhuml8&vote=UPVOTE",
                },
                "color": "#00B172",
                "style": "primary",
                "type": "button",
              },
              Object {
                "action": Object {
                  "label": "😕 No",
                  "type": "uri",
                  "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=feedback&articleId=AWDZYXxAyCdS-nWhumlz&replyId=AWDZeeV0yCdS-nWhuml8&vote=DOWNVOTE",
                },
                "color": "#FB5959",
                "style": "primary",
                "type": "button",
              },
            ],
            "layout": "vertical",
            "spacing": "sm",
            "type": "box",
          },
          "type": "bubble",
        },
        Object {
          "body": Object {
            "contents": Array [
              Object {
                "text": "You can turn on notifications if you want Cofacts to notify you when someone replies to this message.",
                "type": "text",
                "wrap": true,
              },
            ],
            "layout": "vertical",
            "type": "box",
          },
          "footer": Object {
            "contents": Array [
              Object {
                "action": Object {
                  "label": "Go to settings",
                  "type": "uri",
                  "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=setting&utm_source=rumors-line-bot&utm_medium=reply-request",
                },
                "color": "#00B172",
                "style": "primary",
                "type": "button",
              },
            ],
            "layout": "vertical",
            "spacing": "sm",
            "type": "box",
          },
          "header": Object {
            "contents": Array [
              Object {
                "text": "🔔  Receive updates",
                "type": "text",
                "wrap": true,
              },
            ],
            "layout": "vertical",
            "paddingBottom": "none",
            "type": "box",
          },
          "type": "bubble",
        },
        Object {
          "body": Object {
            "contents": Array [
              Object {
                "text": "Don't forget to forward the messages above to others and share with them!",
                "type": "text",
                "wrap": true,
              },
            ],
            "layout": "vertical",
            "paddingAll": "lg",
            "spacing": "md",
            "type": "box",
          },
          "footer": Object {
            "contents": Array [
              Object {
                "action": Object {
                  "label": "Share to friends",
                  "type": "uri",
                  "uri": "https://line.me/R/msg/text/?Someone%20says%20the%20message%20%E2%80%9C(0)(1)(/)(0)(%E2%8B%AF%E2%8B%AF%E2%80%9D%20invalid%20request.%0A%0APlease%20refer%20to%20https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz%20for%20more%20information,%20replies%20and%20references.",
                },
                "color": "#ffb600",
                "style": "primary",
                "type": "button",
              },
              Object {
                "action": Object {
                  "label": "Provide better reply",
                  "type": "uri",
                  "uri": "https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz",
                },
                "color": "#ffb600",
                "style": "link",
                "type": "button",
              },
            ],
            "layout": "vertical",
            "spacing": "sm",
            "type": "box",
          },
          "type": "bubble",
        },
      ],
      "type": "carousel",
    },
    "type": "flex",
  },
]
`;

exports[`should select reply by replyId should ask user to turn on notification settings if and only if they did not turn it on: Notification already allowed 1`] = `
Array [
  Object {
    "altText": "Is the reply helpful?",
    "contents": Object {
      "contents": Array [
        Object {
          "body": Object {
            "contents": Array [
              Object {
                "text": "Is the reply helpful?",
                "type": "text",
                "wrap": true,
              },
            ],
            "layout": "vertical",
            "paddingAll": "xl",
            "type": "box",
          },
          "footer": Object {
            "contents": Array [
              Object {
                "action": Object {
                  "label": "👍 Yes",
                  "type": "uri",
                  "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=feedback&articleId=AWDZYXxAyCdS-nWhumlz&replyId=AWDZeeV0yCdS-nWhuml8&vote=UPVOTE",
                },
                "color": "#00B172",
                "style": "primary",
                "type": "button",
              },
              Object {
                "action": Object {
                  "label": "😕 No",
                  "type": "uri",
                  "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=feedback&articleId=AWDZYXxAyCdS-nWhumlz&replyId=AWDZeeV0yCdS-nWhuml8&vote=DOWNVOTE",
                },
                "color": "#FB5959",
                "style": "primary",
                "type": "button",
              },
            ],
            "layout": "vertical",
            "spacing": "sm",
            "type": "box",
          },
          "type": "bubble",
        },
        Object {
          "body": Object {
            "contents": Array [
              Object {
                "text": "Don't forget to forward the messages above to others and share with them!",
                "type": "text",
                "wrap": true,
              },
            ],
            "layout": "vertical",
            "paddingAll": "lg",
            "spacing": "md",
            "type": "box",
          },
          "footer": Object {
            "contents": Array [
              Object {
                "action": Object {
                  "label": "Share to friends",
                  "type": "uri",
                  "uri": "https://line.me/R/msg/text/?Someone%20says%20the%20message%20%E2%80%9C(0)(1)(/)(0)(%E2%8B%AF%E2%8B%AF%E2%80%9D%20invalid%20request.%0A%0APlease%20refer%20to%20https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz%20for%20more%20information,%20replies%20and%20references.",
                },
                "color": "#ffb600",
                "style": "primary",
                "type": "button",
              },
              Object {
                "action": Object {
                  "label": "Provide better reply",
                  "type": "uri",
                  "uri": "https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz",
                },
                "color": "#ffb600",
                "style": "link",
                "type": "button",
              },
            ],
            "layout": "vertical",
            "spacing": "sm",
            "type": "box",
          },
          "type": "bubble",
        },
      ],
      "type": "carousel",
    },
    "type": "flex",
  },
]
`;

exports[`should select reply by replyId should handle the case with just one reply 1`] = `
Object {
  "data": Object {
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedArticleText": "(0)(1)(/)(0)(9)(line)免費貼圖
「[全螢幕貼圖]生活市集x生活小黑熊」
 https://line.me/S/sticker/",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "AWDZeeV0yCdS-nWhuml8",
    "postback": Object {
      "data": "{\\"input\\":\\"AWDZeeV0yCdS-nWhuml8\\",\\"state\\":\\"CHOOSING_REPLY\\"}",
    },
    "timestamp": 1518964687709,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "💡 Someone on the internet replies to the message:",
      "type": "text",
    },
    Object {
      "text": "這是商業活動廣告01 這是商業活動廣告02 這是商業活動廣告03 這是商業活動廣告04 這是商業活動廣告05 這是商業活動廣告06 這是商業活動廣告07 這是商業活動廣告08 這是商業活動廣告09 這是商業活動廣告10 這是商業活動廣告11 這是商業活動廣告12 這是商業活動廣告13 這是商業活動廣告14 這是商業活動廣告15 這是商業活動廣告16 這是商業活動廣告17 這是商業活動廣告18 這是商業活動廣告19 這是商業活動廣告20",
      "type": "text",
    },
    Object {
      "text": "􀂅 ⚠️️ This reply has no references and it may be biased ⚠️️  􀂅",
      "type": "text",
    },
    Object {
      "text": "⬆️ Therefore, the author think the message invalid request.

💁 This content is provided by Cofact message reporting chatbot and crowd-sourced fact-checking community under CC BY-SA 4.0 license. Please refer to their references and make judgements on your own.


⁉️ If you have different thoughts, you may have your say here:
https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz",
      "type": "text",
    },
    Object {
      "altText": "Is the reply helpful?",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Is the reply helpful?",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "paddingAll": "xl",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "👍 Yes",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=feedback&articleId=AWDZYXxAyCdS-nWhumlz&replyId=AWDZeeV0yCdS-nWhuml8&vote=UPVOTE",
                  },
                  "color": "#00B172",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "😕 No",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=feedback&articleId=AWDZYXxAyCdS-nWhumlz&replyId=AWDZeeV0yCdS-nWhuml8&vote=DOWNVOTE",
                  },
                  "color": "#FB5959",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Don't forget to forward the messages above to others and share with them!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "paddingAll": "lg",
              "spacing": "md",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share to friends",
                    "type": "uri",
                    "uri": "https://line.me/R/msg/text/?Someone%20says%20the%20message%20%E2%80%9C(0)(1)(/)(0)(%E2%8B%AF%E2%8B%AF%E2%80%9D%20invalid%20request.%0A%0APlease%20refer%20to%20https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz%20for%20more%20information,%20replies%20and%20references.",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Provide better reply",
                    "type": "uri",
                    "uri": "https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz",
                  },
                  "color": "#ffb600",
                  "style": "link",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`should select reply by replyId should handle the case with multiple replies 1`] = `
Object {
  "data": Object {
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedArticleText": "(0)(1)(/)(0)(9)(line)免費貼圖
「[全螢幕貼圖]生活市集x生活小黑熊」
 https://line.me/S/sticker/",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "AWDZeeV0yCdS-nWhuml8",
    "postback": Object {
      "data": "{\\"input\\":\\"AWDZeeV0yCdS-nWhuml8\\",\\"state\\":\\"CHOOSING_REPLY\\"}",
    },
    "timestamp": 1518964687709,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "💡 Someone on the internet replies to the message:",
      "type": "text",
    },
    Object {
      "text": "這是商業活動廣告01 這是商業活動廣告02 這是商業活動廣告03 這是商業活動廣告04 這是商業活動廣告05 這是商業活動廣告06 這是商業活動廣告07 這是商業活動廣告08 這是商業活動廣告09 這是商業活動廣告10 這是商業活動廣告11 這是商業活動廣告12 這是商業活動廣告13 這是商業活動廣告14 這是商業活動廣告15 這是商業活動廣告16 這是商業活動廣告17 這是商業活動廣告18 這是商業活動廣告19 這是商業活動廣告20",
      "type": "text",
    },
    Object {
      "text": "􀂅 ⚠️️ This reply has no references and it may be biased ⚠️️  􀂅",
      "type": "text",
    },
    Object {
      "text": "⬆️ Therefore, the author think the message invalid request.

💁 This content is provided by Cofact message reporting chatbot and crowd-sourced fact-checking community under CC BY-SA 4.0 license. Please refer to their references and make judgements on your own.

🗣️ There are different replies for the message. Read them all here before making judgements:
https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz

⁉️ If you have different thoughts, you may have your say here:
https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz",
      "type": "text",
    },
    Object {
      "altText": "Is the reply helpful?",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Is the reply helpful?",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "paddingAll": "xl",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "👍 Yes",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=feedback&articleId=AWDZYXxAyCdS-nWhumlz&replyId=AWDZeeV0yCdS-nWhuml8&vote=UPVOTE",
                  },
                  "color": "#00B172",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "😕 No",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=feedback&articleId=AWDZYXxAyCdS-nWhumlz&replyId=AWDZeeV0yCdS-nWhuml8&vote=DOWNVOTE",
                  },
                  "color": "#FB5959",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Don't forget to forward the messages above to others and share with them!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "paddingAll": "lg",
              "spacing": "md",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share to friends",
                    "type": "uri",
                    "uri": "https://line.me/R/msg/text/?Someone%20says%20the%20message%20%E2%80%9C(0)(1)(/)(0)(%E2%8B%AF%E2%8B%AF%E2%80%9D%20invalid%20request.%0A%0APlease%20refer%20to%20https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz%20for%20more%20information,%20replies%20and%20references.",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Provide better reply",
                    "type": "uri",
                    "uri": "https://dev.cofacts.tw/article/AWDZYXxAyCdS-nWhumlz",
                  },
                  "color": "#ffb600",
                  "style": "link",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
